# dead-drop

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  build.rs  deploy.sh  jest.config.ts  package.json  tsconfig.json  webpack.config.js
devops/dockerfiles/: dead-drop
devops/kubernetes/charts/dead-drop/: Chart.yaml  values.yaml
devops/kubernetes/charts/dead-drop/templates/: NOTES.txt  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
devops/kubernetes/values/: dead-pub.yaml
src/: crypto.test.ts  crypto.ts  main.rs  main.ts  notepad.svelte
src/components/: notepad.svelte  status.svelte
static/: .gitignore
templates/: base.html.tera  error.html.tera  index.html.tera  notepad.html.tera
tests/js/: _setup.ts
