[package]
name = "dead-drop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = { version = "1.9.0", features = ["serde"] }
regex = "1.9.3"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.105"

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["tera"]
