[package]
name = "dead-drop"
version = "1.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = { version = "1.9.0", features = ["serde"] }
hex = "0.4.3"
rand = "0.8.5"
regex = "1.10"
rocket = { version = "0.5", features = ["json"] }
rocket-governor = "0.2.0-rc.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.128"

[dependencies.rocket_dyn_templates]
version = "0.2"
features = ["tera"]
